--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,10 +1,9 @@
 {
   "bootstrap-sha": "6e61af34c0bfdfc3d6f973bffcd6a7e2420590d2",
+  "initial-version": "0.1.0",
   "packages": {
     "src/apis/abusiveexperiencereport": {},
     "src/apis/acceleratedmobilepageurl": {},
-    "src/apis/acmedns": {},
-    "src/apis/addressvalidation": {},
     "src/apis/adexchangebuyer": {},
     "src/apis/adexchangebuyer2": {},
     "src/apis/adexperiencereport": {},
@@ -12,8 +11,6 @@
     "src/apis/admob": {},
     "src/apis/adsense": {},
     "src/apis/adsensehost": {},
-    "src/apis/adsenseplatform": {},
-    "src/apis/airquality": {},
     "src/apis/alertcenter": {},
     "src/apis/analytics": {},
     "src/apis/analyticsreporting": {},
@@ -21,41 +18,30 @@
     "src/apis/androidenterprise": {},
     "src/apis/androidmanagement": {},
     "src/apis/androidpublisher": {},
-    "src/apis/apim": {},
-    "src/apis/apphub": {},
     "src/apis/appsactivity": {},
     "src/apis/authorizedbuyersmarketplace": {},
-    "src/apis/backupdr": {},
-    "src/apis/biglake": {},
     "src/apis/bigtableadmin": {},
-    "src/apis/blockchainnodeengine": {},
     "src/apis/blogger": {},
     "src/apis/books": {},
     "src/apis/businessprofileperformance": {},
     "src/apis/calendar": {},
     "src/apis/chat": {},
-    "src/apis/checks": {},
     "src/apis/chromemanagement": {},
     "src/apis/chromepolicy": {},
     "src/apis/chromeuxreport": {},
     "src/apis/civicinfo": {},
     "src/apis/classroom": {},
-    "src/apis/cloudcontrolspartner": {},
     "src/apis/cloudidentity": {},
     "src/apis/cloudkms": {},
     "src/apis/cloudsearch": {},
     "src/apis/cloudshell": {},
+    "src/apis/cloudsupport": {},
     "src/apis/cloudtasks": {},
-    "src/apis/config": {},
     "src/apis/connectors": {},
-    "src/apis/contactcenteraiplatform": {},
     "src/apis/content": {},
-    "src/apis/css": {},
     "src/apis/customsearch": {},
     "src/apis/datapipelines": {},
-    "src/apis/dataportability": {},
     "src/apis/deploymentmanager": {},
-    "src/apis/developerconnect": {},
     "src/apis/dfareporting": {},
     "src/apis/digitalassetlinks": {},
     "src/apis/discovery": {},
@@ -72,7 +58,6 @@
     "src/apis/fcmdata": {},
     "src/apis/firebase": {},
     "src/apis/firebaseappcheck": {},
-    "src/apis/firebaseappdistribution": {},
     "src/apis/firebasedatabase": {},
     "src/apis/firebasedynamiclinks": {},
     "src/apis/firebasehosting": {},
@@ -85,7 +70,6 @@
     "src/apis/gamesConfiguration": {},
     "src/apis/gamesManagement": {},
     "src/apis/genomics": {},
-    "src/apis/gkeonprem": {},
     "src/apis/gmail": {},
     "src/apis/gmailpostmastertools": {},
     "src/apis/groupsmigration": {},
@@ -96,18 +80,11 @@
     "src/apis/ideahub": {},
     "src/apis/identitytoolkit": {},
     "src/apis/indexing": {},
-    "src/apis/integrations": {},
-    "src/apis/keep": {},
     "src/apis/kgsearch": {},
-    "src/apis/kmsinventory": {},
     "src/apis/libraryagent": {},
     "src/apis/licensing": {},
     "src/apis/localservices": {},
-    "src/apis/looker": {},
     "src/apis/manufacturers": {},
-    "src/apis/marketingplatformadmin": {},
-    "src/apis/meet": {},
-    "src/apis/merchantapi": {},
     "src/apis/ml": {},
     "src/apis/mybusinessaccountmanagement": {},
     "src/apis/mybusinessbusinesscalls": {},
@@ -126,16 +103,13 @@
     "src/apis/playablelocations": {},
     "src/apis/playcustomapp": {},
     "src/apis/playdeveloperreporting": {},
-    "src/apis/playgrouping": {},
     "src/apis/playintegrity": {},
     "src/apis/plus": {},
     "src/apis/policyanalyzer": {},
     "src/apis/policysimulator": {},
-    "src/apis/pollen": {},
     "src/apis/poly": {},
     "src/apis/prod_tt_sasportal": {},
     "src/apis/pubsublite": {},
-    "src/apis/readerrevenuesubscriptionlinking": {},
     "src/apis/realtimebidding": {},
     "src/apis/recommendationengine": {},
     "src/apis/remotebuildexecution": {},
@@ -144,7 +118,6 @@
     "src/apis/safebrowsing": {},
     "src/apis/sasportal": {},
     "src/apis/script": {},
-    "src/apis/searchads360": {},
     "src/apis/searchconsole": {},
     "src/apis/serviceconsumermanagement": {},
     "src/apis/servicenetworking": {},
@@ -152,7 +125,6 @@
     "src/apis/siteVerification": {},
     "src/apis/slides": {},
     "src/apis/smartdevicemanagement": {},
-    "src/apis/solar": {},
     "src/apis/sourcerepo": {},
     "src/apis/sql": {},
     "src/apis/sqladmin": {},
@@ -168,139 +140,165 @@
     "src/apis/vectortile": {},
     "src/apis/verifiedaccess": {},
     "src/apis/versionhistory": {},
-    "src/apis/walletobjects": {},
     "src/apis/webfonts": {},
     "src/apis/webmasters": {},
     "src/apis/workflowexecutions": {},
     "src/apis/workloadmanager": {},
-    "src/apis/workspaceevents": {},
+    "src/apis/workstations": {},
     "src/apis/youtube": {},
     "src/apis/youtubeAnalytics": {},
     "src/apis/youtubereporting": {},
     ".": {},
-    "src/apis/spanner": {},
-    "src/apis/texttospeech": {},
-    "src/apis/networkconnectivity": {},
-    "src/apis/datafusion": {},
-    "src/apis/clouderrorreporting": {},
-    "src/apis/websecurityscanner": {},
-    "src/apis/gkebackup": {},
-    "src/apis/cloudsupport": {},
-    "src/apis/domains": {},
-    "src/apis/networkmanagement": {},
-    "src/apis/cloudasset": {},
-    "src/apis/documentai": {},
-    "src/apis/webrisk": {},
-    "src/apis/batch": {},
-    "src/apis/cloudprofiler": {},
-    "src/apis/container": {},
-    "src/apis/workflows": {},
-    "src/apis/file": {},
-    "src/apis/containeranalysis": {},
-    "src/apis/notebooks": {},
-    "src/apis/analyticsdata": {},
-    "src/apis/securitycenter": {},
+    "src/apis/ids": {},
     "src/apis/places": {},
-    "src/apis/billingbudgets": {},
-    "src/apis/workstations": {},
-    "src/apis/migrationcenter": {},
-    "src/apis/compute": {},
-    "src/apis/videointelligence": {},
+    "src/apis/vpcaccess": {},
+    "src/apis/privateca": {},
+    "src/apis/lifesciences": {},
+    "src/apis/datalabeling": {},
+    "src/apis/cloudasset": {},
+    "src/apis/tasks": {},
+    "src/apis/datalineage": {},
+    "src/apis/transcoder": {},
+    "src/apis/clouderrorreporting": {},
+    "src/apis/kmsinventory": {},
+    "src/apis/websecurityscanner": {},
+    "src/apis/apigateway": {},
+    "src/apis/analyticshub": {},
+    "src/apis/notebooks": {},
+    "src/apis/bigqueryconnection": {},
+    "src/apis/recommender": {},
     "src/apis/analyticsadmin": {},
-    "src/apis/cloudchannel": {},
-    "src/apis/pubsub": {},
+    "src/apis/servicedirectory": {},
+    "src/apis/monitoring": {},
+    "src/apis/tpu": {},
+    "src/apis/gkebackup": {},
+    "src/apis/workflows": {},
+    "src/apis/jobs": {},
+    "src/apis/containeranalysis": {},
+    "src/apis/accesscontextmanager": {},
+    "src/apis/datafusion": {},
+    "src/apis/orgpolicy": {},
+    "src/apis/documentai": {},
+    "src/apis/datastream": {},
+    "src/apis/composer": {},
+    "src/apis/assuredworkloads": {},
+    "src/apis/logging": {},
+    "src/apis/domains": {},
+    "src/apis/gkehub": {},
+    "src/apis/vision": {},
+    "src/apis/policytroubleshooter": {},
+    "src/apis/dataflow": {},
+    "src/apis/gameservices": {},
+    "src/apis/acmedns": {},
+    "src/apis/discoveryengine": {},
+    "src/apis/secretmanager": {},
+    "src/apis/bigquery": {},
+    "src/apis/cloudfunctions": {},
+    "src/apis/vmmigration": {},
+    "src/apis/certificatemanager": {},
+    "src/apis/baremetalsolution": {},
+    "src/apis/accessapproval": {},
+    "src/apis/container": {},
+    "src/apis/datamigration": {},
+    "src/apis/publicca": {},
+    "src/apis/batch": {},
+    "src/apis/datacatalog": {},
+    "src/apis/managedidentities": {},
+    "src/apis/bigquerydatatransfer": {},
+    "src/apis/apikeys": {},
+    "src/apis/dns": {},
+    "src/apis/memcache": {},
+    "src/apis/cloudscheduler": {},
+    "src/apis/dialogflow": {},
+    "src/apis/contentwarehouse": {},
+    "src/apis/speech": {},
+    "src/apis/contactcenterinsights": {},
+    "src/apis/oslogin": {},
+    "src/apis/texttospeech": {},
+    "src/apis/readerrevenuesubscriptionlinking": {},
+    "src/apis/compute": {},
+    "src/apis/cloudtrace": {},
+    "src/apis/dataplex": {},
+    "src/apis/advisorynotifications": {},
+    "src/apis/language": {},
+    "src/apis/retail": {},
+    "src/apis/file": {},
+    "src/apis/iap": {},
+    "src/apis/cloudresourcemanager": {},
+    "src/apis/osconfig": {},
     "src/apis/essentialcontacts": {},
-    "src/apis/resourcesettings": {},
+    "src/apis/appengine": {},
+    "src/apis/checks": {},
+    "src/apis/cloudchannel": {},
+    "src/apis/translate": {},
+    "src/apis/bigqueryreservation": {},
+    "src/apis/apigeeregistry": {},
+    "src/apis/eventarc": {},
+    "src/apis/redis": {},
+    "src/apis/clouddebugger": {},
+    "src/apis/servicecontrol": {},
+    "src/apis/videointelligence": {},
+    "src/apis/cloudbuild": {},
+    "src/apis/dlp": {},
+    "src/apis/networksecurity": {},
+    "src/apis/binaryauthorization": {},
+    "src/apis/securitycenter": {},
+    "src/apis/cloudprofiler": {},
+    "src/apis/dataproc": {},
+    "src/apis/pubsub": {},
+    "src/apis/dataform": {},
+    "src/apis/servicemanagement": {},
+    "src/apis/searchads360": {},
+    "src/apis/firebaseappdistribution": {},
+    "src/apis/billingbudgets": {},
+    "src/apis/cloudiot": {},
     "src/apis/area120tables": {},
     "src/apis/beyondcorp": {},
-    "src/apis/appengine": {},
-    "src/apis/managedidentities": {},
-    "src/apis/assuredworkloads": {},
-    "src/apis/dataform": {},
-    "src/apis/dns": {},
-    "src/apis/tasks": {},
-    "src/apis/dataplex": {},
-    "src/apis/cloudscheduler": {},
-    "src/apis/iamcredentials": {},
-    "src/apis/osconfig": {},
-    "src/apis/certificatemanager": {},
-    "src/apis/retail": {},
-    "src/apis/storagetransfer": {},
-    "src/apis/transcoder": {},
-    "src/apis/analyticshub": {},
-    "src/apis/datalabeling": {},
-    "src/apis/logging": {},
-    "src/apis/accesscontextmanager": {},
-    "src/apis/policytroubleshooter": {},
-    "src/apis/binaryauthorization": {},
-    "src/apis/serviceusage": {},
-    "src/apis/baremetalsolution": {},
-    "src/apis/vmmigration": {},
-    "src/apis/clouddeploy": {},
-    "src/apis/redis": {},
-    "src/apis/recommender": {},
-    "src/apis/apikeys": {},
-    "src/apis/vmwareengine": {},
-    "src/apis/rapidmigrationassessment": {},
-    "src/apis/metastore": {},
-    "src/apis/dataflow": {},
-    "src/apis/publicca": {},
-    "src/apis/translate": {},
-    "src/apis/cloudbilling": {},
-    "src/apis/language": {},
-    "src/apis/servicemanagement": {},
-    "src/apis/memcache": {},
-    "src/apis/dlp": {},
-    "src/apis/vision": {},
-    "src/apis/servicecontrol": {},
-    "src/apis/privateca": {},
-    "src/apis/bigquery": {},
-    "src/apis/cloudresourcemanager": {},
-    "src/apis/datastore": {},
-    "src/apis/contactcenterinsights": {},
-    "src/apis/datacatalog": {},
-    "src/apis/apigeeregistry": {},
-    "src/apis/accessapproval": {},
-    "src/apis/eventarc": {},
-    "src/apis/cloudfunctions": {},
-    "src/apis/run": {},
-    "src/apis/advisorynotifications": {},
-    "src/apis/clouddebugger": {},
-    "src/apis/cloudiot": {},
-    "src/apis/dataproc": {},
-    "src/apis/datamigration": {},
-    "src/apis/secretmanager": {},
-    "src/apis/dialogflow": {},
-    "src/apis/bigquerydatatransfer": {},
-    "src/apis/aiplatform": {},
-    "src/apis/datalineage": {},
-    "src/apis/bigquerydatapolicy": {},
-    "src/apis/apigateway": {},
-    "src/apis/iap": {},
-    "src/apis/jobs": {},
-    "src/apis/recaptchaenterprise": {},
-    "src/apis/cloudbuild": {},
-    "src/apis/alloydb": {},
-    "src/apis/speech": {},
-    "src/apis/firestore": {},
-    "src/apis/lifesciences": {},
-    "src/apis/datastream": {},
-    "src/apis/servicedirectory": {},
-    "src/apis/vpcaccess": {},
-    "src/apis/composer": {},
-    "src/apis/bigqueryconnection": {},
-    "src/apis/contentwarehouse": {},
-    "src/apis/gkehub": {},
-    "src/apis/monitoring": {},
-    "src/apis/gameservices": {},
+    "src/apis/networkmanagement": {},
+    "src/apis/networkconnectivity": {},
+    "src/apis/analyticsdata": {},
+    "src/apis/spanner": {},
     "src/apis/artifactregistry": {},
-    "src/apis/networksecurity": {},
-    "src/apis/cloudtrace": {},
-    "src/apis/discoveryengine": {},
-    "src/apis/bigqueryreservation": {},
-    "src/apis/tpu": {},
-    "src/apis/ids": {},
-    "src/apis/oslogin": {},
-    "src/apis/orgpolicy": {}
+    "src/apis/firestore": {},
+    "src/apis/recaptchaenterprise": {},
+    "src/apis/clouddeploy": {},
+    "src/apis/datastore": {},
+    "src/apis/integrations": {},
+    "src/apis/serviceusage": {},
+    "src/apis/iamcredentials": {},
+    "src/apis/resourcesettings": {},
+    "src/apis/storagetransfer": {},
+    "src/apis/run": {},
+    "src/apis/aiplatform": {},
+    "src/apis/webrisk": {},
+    "src/apis/gkeonprem": {},
+    "src/apis/blockchainnodeengine": {},
+    "src/apis/migrationcenter": {},
+    "src/apis/contactcenteraiplatform": {},
+    "src/apis/cloudbilling": {},
+    "src/apis/metastore": {},
+    "src/apis/rapidmigrationassessment": {},
+    "src/apis/playgrouping": {},
+    "src/apis/alloydb": {},
+    "src/apis/backupdr": {},
+    "src/apis/vmwareengine": {},
+    "src/apis/biglake": {},
+    "src/apis/looker": {},
+    "src/apis/bigquerydatapolicy": {},
+    "src/apis/walletobjects": {},
+    "src/apis/apphub": {},
+    "src/apis/dataportability": {},
+    "src/apis/workspaceevents": {},
+    "src/apis/marketingplatformadmin": {},
+    "src/apis/solar": {},
+    "src/apis/config": {},
+    "src/apis/cloudcontrolspartner": {},
+    "src/apis/addressvalidation": {},
+    "src/apis/developerconnect": {},
+    "src/apis/merchantapi": {},
+    "src/apis/meet": {},
+    "src/apis/pollen": {},
+    "src/apis/airquality": {},
+    "src/apis/apim": {}
   }
 }
