--- a/.github/workflows/update-apis.yaml
+++ b/.github/workflows/update-apis.yaml
@@ -8,14 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+      - run: gh repo fork googleapis/google-api-nodejs-client --fork-name google-api-nodejs-client-autodisco --clone --remote
+        env:
+          GH_TOKEN: ${{ secrets.YOSHI_CODE_BOT_TOKEN }}
       - uses: actions/setup-node@v4
         with:
           node-version: 14
       - run: npm install
+        working-directory: ./google-api-nodejs-client-autodisco
       - run: npm run update-disclaimers
-      - run: gh repo fork googleapis/google-api-nodejs-client --fork-name google-api-nodejs-client-autodisco --clone --remote
-        env:
-          GH_TOKEN: ${{ secrets.YOSHI_CODE_BOT_TOKEN }}
+        working-directory: ./google-api-nodejs-client-autodisco
       - run: npm run submit-prs
         working-directory: ./google-api-nodejs-client-autodisco
         env:
