--- a/.github/workflows/update-apis.yaml
+++ b/.github/workflows/update-apis.yaml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 14
-      - run: gh repo fork googleapis/google-api-nodejs-client --fork-name google-api-nodejs-client-autodisco --clone -- --branch createPRfromFork --remote
+      - run: rm -rf yoshi-code-bot/google-api-nodejs-client-autodisco && gh repo fork googleapis/google-api-nodejs-client --fork-name google-api-nodejs-client-autodisco --clone -- --branch createPRfromFork --remote
         env:
           GH_TOKEN: ${{ secrets.YOSHI_CODE_BOT_TOKEN }}
       - run: npm install
