--- a/.github/workflows/update-apis.yaml
+++ b/.github/workflows/update-apis.yaml
@@ -16,7 +16,7 @@ jobs:
       - run: gh repo sync yoshi-code-bot/google-api-nodejs-client-autodisco --force
         env:
           GH_TOKEN: ${{ secrets.YOSHI_CODE_BOT_TOKEN }}
-      - run: git checkout -b createPRfromFork
+      - run: git checkout createPRfromFork
         working-directory: ./google-api-nodejs-client-autodisco
       - run: npm install
         working-directory: ./google-api-nodejs-client-autodisco
