--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "googleapis-common": "^7.0.0"
   },
   "devDependencies": {
-    "@compodoc/compodoc": "1.1.20",
+    "@compodoc/compodoc": "1.1.23",
     "@types/execa": "^2.0.0",
     "@types/mocha": "^9.0.0",
     "@types/mv": "^2.1.0",
@@ -74,6 +74,7 @@
     "@types/url-template": "^2.0.28",
     "@types/yargs-parser": "^20.0.0",
     "c8": "^9.0.0",
+    "cheerio": "1.0.0-rc.12",
     "codecov": "^3.4.0",
     "cross-env": "^7.0.3",
     "execa": "^5.0.0",
