--- a/.kokoro/release/publish.cfg
+++ b/.kokoro/release/publish.cfg
@@ -1,3 +1,12 @@
+before_action {
+  fetch_keystore {
+    keystore_resource {
+      keystore_config_id: 73713
+      keyname: "google-api-nodejs-client-npm-token"
+    }
+  }
+}
+
 env_vars: {
   key: "SECRET_MANAGER_KEYS"
   value: "repo_automation_bots_npm_publish_token,releasetool-publish-reporter-app,releasetool-publish-reporter-googleapis-installation,releasetool-publish-reporter-pem"
