--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "nunjucks": "^3.2.1",
     "open": "^8.0.0",
     "p-queue": "^6.0.0",
+    "pdfmake": "0.2.12",
     "prettier": "^3.0.0",
     "proxyquire": "^2.1.3",
     "rimraf": "^3.0.2",
