--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "googleapis-common": "^7.0.0"
   },
   "devDependencies": {
-    "@compodoc/compodoc": "1.1.23",
     "@types/execa": "^2.0.0",
     "@types/mocha": "^9.0.0",
     "@types/mv": "^2.1.0",
@@ -74,12 +73,14 @@
     "@types/url-template": "^2.0.28",
     "@types/yargs-parser": "^20.0.0",
     "c8": "^9.0.0",
-    "cheerio": "1.0.0-rc.12",
     "codecov": "^3.4.0",
     "cross-env": "^7.0.3",
     "execa": "^5.0.0",
     "gaxios": "^6.0.3",
     "gts": "^5.0.0",
+    "jsdoc": "^4.0.0",
+    "jsdoc-fresh": "^3.0.0",
+    "jsdoc-region-tag": "^3.0.0",
     "js-green-licenses": "^4.0.0",
     "linkinator": "^4.0.0",
     "mocha": "^9.2.2",
