--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "googleapis-common": "^7.0.0"
   },
   "devDependencies": {
-    "@compodoc/compodoc": "1.1.23",
     "@types/execa": "^2.0.0",
     "@types/mocha": "^9.0.0",
     "@types/mv": "^2.1.0",
@@ -80,6 +79,9 @@
     "execa": "^5.0.0",
     "gaxios": "^6.0.3",
     "gts": "^5.0.0",
+    "jsdoc": "^4.0.0",
+    "jsdoc-fresh": "^3.0.0",
+    "jsdoc-region-tag": "^3.0.0",
     "js-green-licenses": "^4.0.0",
     "linkinator": "^4.0.0",
     "mocha": "^9.2.2",
