--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prepare": "npm run compile",
     "test": "c8 mocha build/test",
     "predocs": "npm run build-tools",
-    "docs": "node build/src/generator/docs",
+    "docs": "npm run compile && node build/src/generator/docs",
     "predocs2": "npm run compile",
     "docs-extract": "node --max-old-space-size=8192 ./node_modules/@microsoft/api-extractor/bin/api-extractor run --local --verbose",
     "docs-md": "node --max-old-space-size=8192 ./node_modules/@microsoft/api-documenter/bin/api-documenter markdown --input-folder build/docs --output-folder docs",
@@ -79,10 +79,10 @@
     "execa": "^5.0.0",
     "gaxios": "^6.0.3",
     "gts": "^5.0.0",
+    "js-green-licenses": "^4.0.0",
     "jsdoc": "^4.0.0",
     "jsdoc-fresh": "^3.0.0",
     "jsdoc-region-tag": "^3.0.0",
-    "js-green-licenses": "^4.0.0",
     "linkinator": "^4.0.0",
     "mocha": "^9.2.2",
     "mv": "^2.1.1",
