chore: remove comma

--- a/samples/package.json
+++ b/samples/package.json
@@ -22,7 +22,7 @@
     "googleapis-common": "^8.0.2-rc.0",
     "nconf": "^0.13.0",
     "open": "^8.0.0",
-    "server-destroy": "^1.0.1",
+    "server-destroy": "^1.0.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
